<resources>
    <string name="app_name">The Beast Notes of World</string>
    <string name="Menu">Меню</string>
    <string name="Search">Поиск</string>
    <string name="Sort_by">Сортировать по:</string>
    <string name="to_back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="day_to_end">Дней на выполнение:</string>
    <string name="importance">Важность:</string>
    <string name="toDoNote">заметка</string>
    <string name="title">Заголовок</string>
    <string name="add_to_new_note">Добавить новую заметку</string>
    <string name="edit_note">Редактировать запись</string>
    <string name="create_new_note">Создать новую запись</string>
    <string name="date_of_create">Дата создания: </string>
    <string name="sort_by_importance">Сортировка по важности</string>
    <string name="sort_by_day_to_deadline">Сортировка по срочности</string>
    <string name="sort_by_date_of_create">Показать выполненные заметки</string>
    <string name="remote_all">Удалить все</string>
    <string name="add_to_simple_note">Добавление простой заметки</string>
    <string name="text_note">Текст заметки</string>
    <string name="add_to_do_note">Создать задание</string>
    <string name="add_simple_note">Добавить простую заметку</string>
    <string name="go_to_simple_note">Перейти к простым заметкам</string>
    <string name="go_to_to_do_list">Перейти к задачам</string>
    <string name="go_to_completed_to_do">Перейти к выполненым задачам</string>
    <string name="text_show">ПОКАЗАТЬ:</string>
    <string name="go_to_create_simple_note">Создать простую заметку</string>
    <string name="to_back_simple_note">Назад (к простым заметкам)</string>
    <string name="edit_time_to_notification">Установить время напоминаний</string>
    <string name="save_data">Сохранить базу данных</string>
    <string name="load_data">Загрузить базу данных</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="go_to_settings_menu">Перейти в меню настроек</string>
    <string name="what_show_notification">Уведомления о каких заметках показывать:</string>
    <array name="showSort">
        <item>Сначала важные</item>
        <item>Сначала срочные</item>
    </array>
    <array name="time_notification">
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
    </array>
    <string-array name="importance">
        <item>Не важно</item>
        <item>Небольшая</item>
        <item>Средняя </item>
        <item>Высокая</item>
    </string-array>
    <string-array name="what_show_notification">
        <item>Все</item>
        <item>От небольшой важности и выше</item>
        <item>От средней и высокой важности</item>
        <item>Только высокой важности</item>
    </string-array>
</resources>